--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       links:
         - nginx
       environment:
-        DOMAINS: example.com
-        EMAIL: webmaster@example.com
+        DOMAINS: csirt-cy.com
+        EMAIL: info@csirt-cy.com
         WEBROOT_PATH: /tmp/letsencrypt
         EXP_LIMIT: 30
         CHECK_FREQ: 30
