--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,8 +14,8 @@ http {
   real_ip_recursive on;
   
   server {
-    listen   80;
-    server_name example.com;
+    listen   8888;
+    server_name csirt-cy.com;
 
     location '/.well-known/acme-challenge' {
       default_type "text/plain";
