--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,8 @@ services:
          deck-chores.dump.command: sh -c "greenbone-nvt-sync; openvasmd --rebuild --progress"
          deck-chores.dump.interval: daily
   # Daily updates to openvas
-  # cron:
-  #     restart: always
-  #     image: funkyfuture/deck-chores
-  #     volumes:
-  #       - "/var/run/docker.sock:/var/run/docker.sock"
+  cron:
+      restart: always
+      image: funkyfuture/deck-chores:1
+      volumes:
+        - "/var/run/docker.sock:/var/run/docker.sock"
